@@ -1077,6 +1077,7 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Correct IP checksum calculation in ICMP and UDP message send logic.
 	* NSH: Created an HTML document and a more detailed README file describing NSH.
 	* Added basic TFTP client logic (netutils/tftpc).  Untested as of initial check-in.
+	* NSH: Add get and put commands to support TFTP get and put operations.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
