@@ -450,4 +450,5 @@
 	* Correct IP checksum calculation in ICMP and UDP message send logic.
 	* NSH: Created an HTML document and a more detailed README file describing NSH.
 	* Added basic TFTP client logic (netutils/tftpc).  Untested as of initial check-in.
+	* NSH: Add get and put commands to support TFTP get and put operations.
 
